--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,269 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6d52ad9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fea5c12a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shopping_trends = Path(\"shopping_trends_updated.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4a7c52fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shopping_trends = pd.read_csv(shopping_trends)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a9a9177a",
+   "execution_count": 2,
+   "id": "40b79887",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Customer ID</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item Purchased</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Purchase Amount (USD)</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Color</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Review Rating</th>\n",
-       "      <th>Subscription Status</th>\n",
-       "      <th>Shipping Type</th>\n",
-       "      <th>Discount Applied</th>\n",
-       "      <th>Promo Code Used</th>\n",
-       "      <th>Previous Purchases</th>\n",
-       "      <th>Payment Method</th>\n",
-       "      <th>Frequency of Purchases</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>55</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Blouse</td>\n",
-       "      <td>Clothing</td>\n",
-       "      <td>53</td>\n",
-       "      <td>Kentucky</td>\n",
-       "      <td>L</td>\n",
-       "      <td>Gray</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Express</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Venmo</td>\n",
-       "      <td>Fortnightly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Sweater</td>\n",
-       "      <td>Clothing</td>\n",
-       "      <td>64</td>\n",
-       "      <td>Maine</td>\n",
-       "      <td>L</td>\n",
-       "      <td>Maroon</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Express</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Cash</td>\n",
-       "      <td>Fortnightly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Jeans</td>\n",
-       "      <td>Clothing</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Maroon</td>\n",
-       "      <td>Spring</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Free Shipping</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Credit Card</td>\n",
-       "      <td>Weekly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Sandals</td>\n",
-       "      <td>Footwear</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Rhode Island</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Maroon</td>\n",
-       "      <td>Spring</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Next Day Air</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>49</td>\n",
-       "      <td>PayPal</td>\n",
-       "      <td>Weekly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Blouse</td>\n",
-       "      <td>Clothing</td>\n",
-       "      <td>49</td>\n",
-       "      <td>Oregon</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Turquoise</td>\n",
-       "      <td>Spring</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Free Shipping</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>31</td>\n",
-       "      <td>PayPal</td>\n",
-       "      <td>Annually</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Customer ID  Age Gender Item Purchased  Category  Purchase Amount (USD)  \\\n",
-       "0            1   55   Male         Blouse  Clothing                     53   \n",
-       "1            2   19   Male        Sweater  Clothing                     64   \n",
-       "2            3   50   Male          Jeans  Clothing                     73   \n",
-       "3            4   21   Male        Sandals  Footwear                     90   \n",
-       "4            5   45   Male         Blouse  Clothing                     49   \n",
-       "\n",
-       "        Location Size      Color  Season  Review Rating Subscription Status  \\\n",
-       "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
-       "1          Maine    L     Maroon  Winter            3.1                 Yes   \n",
-       "2  Massachusetts    S     Maroon  Spring            3.1                 Yes   \n",
-       "3   Rhode Island    M     Maroon  Spring            3.5                 Yes   \n",
-       "4         Oregon    M  Turquoise  Spring            2.7                 Yes   \n",
-       "\n",
-       "   Shipping Type Discount Applied Promo Code Used  Previous Purchases  \\\n",
-       "0        Express              Yes             Yes                  14   \n",
-       "1        Express              Yes             Yes                   2   \n",
-       "2  Free Shipping              Yes             Yes                  23   \n",
-       "3   Next Day Air              Yes             Yes                  49   \n",
-       "4  Free Shipping              Yes             Yes                  31   \n",
-       "\n",
-       "  Payment Method Frequency of Purchases  \n",
-       "0          Venmo            Fortnightly  \n",
-       "1           Cash            Fortnightly  \n",
-       "2    Credit Card                 Weekly  \n",
-       "3         PayPal                 Weekly  \n",
-       "4         PayPal               Annually  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'shopping_trends.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m shopping_trends_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshopping_trends.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:948\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    935\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    936\u001b[0m     dialect,\n\u001b[0;32m    937\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    944\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m    945\u001b[0m )\n\u001b[0;32m    946\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 948\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:611\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    608\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    610\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 611\u001b[0m parser \u001b[38;5;241m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m    613\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[0;32m    614\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1448\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1445\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   1447\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1448\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_engine(f, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1705\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1703\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[0;32m   1704\u001b[0m         mode \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1705\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;241m=\u001b[39m get_handle(\n\u001b[0;32m   1706\u001b[0m     f,\n\u001b[0;32m   1707\u001b[0m     mode,\n\u001b[0;32m   1708\u001b[0m     encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[0;32m   1709\u001b[0m     compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompression\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[0;32m   1710\u001b[0m     memory_map\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmemory_map\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m),\n\u001b[0;32m   1711\u001b[0m     is_text\u001b[38;5;241m=\u001b[39mis_text,\n\u001b[0;32m   1712\u001b[0m     errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding_errors\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstrict\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1713\u001b[0m     storage_options\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstorage_options\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[0;32m   1714\u001b[0m )\n\u001b[0;32m   1715\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1716\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles\u001b[38;5;241m.\u001b[39mhandle\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\dev\\Lib\\site-packages\\pandas\\io\\common.py:863\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    858\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m    859\u001b[0m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[0;32m    860\u001b[0m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[0;32m    861\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mencoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mmode:\n\u001b[0;32m    862\u001b[0m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[1;32m--> 863\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[0;32m    864\u001b[0m             handle,\n\u001b[0;32m    865\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[0;32m    866\u001b[0m             encoding\u001b[38;5;241m=\u001b[39mioargs\u001b[38;5;241m.\u001b[39mencoding,\n\u001b[0;32m    867\u001b[0m             errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[0;32m    868\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    869\u001b[0m         )\n\u001b[0;32m    870\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    871\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[0;32m    872\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(handle, ioargs\u001b[38;5;241m.\u001b[39mmode)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'shopping_trends.csv'"
+     ]
     }
    ],
+   "source": [
+    "\n",
+    "shopping_trends_df = pd.read_csv(\"shopping_trends.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a7c52fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a9177a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "shopping_trends.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cd0d14c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3900 entries, 0 to 3899\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   Customer ID             3900 non-null   int64  \n",
-      " 1   Age                     3900 non-null   int64  \n",
-      " 2   Gender                  3900 non-null   object \n",
-      " 3   Item Purchased          3900 non-null   object \n",
-      " 4   Category                3900 non-null   object \n",
-      " 5   Purchase Amount (USD)   3900 non-null   int64  \n",
-      " 6   Location                3900 non-null   object \n",
-      " 7   Size                    3900 non-null   object \n",
-      " 8   Color                   3900 non-null   object \n",
-      " 9   Season                  3900 non-null   object \n",
-      " 10  Review Rating           3900 non-null   float64\n",
-      " 11  Subscription Status     3900 non-null   object \n",
-      " 12  Shipping Type           3900 non-null   object \n",
-      " 13  Discount Applied        3900 non-null   object \n",
-      " 14  Promo Code Used         3900 non-null   object \n",
-      " 15  Previous Purchases      3900 non-null   int64  \n",
-      " 16  Payment Method          3900 non-null   object \n",
-      " 17  Frequency of Purchases  3900 non-null   object \n",
-      "dtypes: float64(1), int64(4), object(13)\n",
-      "memory usage: 548.6+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shopping_trends.info()"
    ]
@@ -275,7 +73,9 @@
    "id": "76bd4742",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shopping_trends.describe()"
+   ]
   }
  ],
  "metadata": {
@@ -294,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
